Fix editor yellow syndrome, remove EditModifiers metric

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3822,7 +3822,7 @@ ShowCreditDisplay=false
 ShowStyleIcon=false
 InvertScrollSpeedButtons=false
 TimerSeconds=-1
-EditModifiers="no reverse"
+EditModifiers=""
 EditHelpX=SCREEN_LEFT+4
 EditHelpY=SCREEN_TOP+16
 EditHelpOnCommand=halign,0;valign,0;zoom,0.5;shadowlength,1
