removing the scoring line from options for now, to prevent crashes

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2918,8 +2918,8 @@ Line20="conf,VisualDelaySeconds"
 Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsService"
 PrevScreen="ScreenOptionsService"
-LineNames="Score,3,4,8,11,13,14,15,16,28,29,30,31"
-LineScore="lua,UserPrefScoringMode()"
+LineNames="3,4,8,11,13,14,15,16,28,29,30,31"
+#LineScore="lua,UserPrefScoringMode()"
 Line3="conf,TimingWindowScale"
 Line4="conf,LifeDifficulty"
 Line8="lua,GamePrefDefaultFail()"
