--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1283,7 +1283,7 @@ LineFlashyCombo="lua,ThemePrefRow('FlashyCombo')"
 [ScreenOptionsGraphicsSound]
 
 [ScreenOptionsAdvanced]
-LineNames="Score,3,4,8,11,13,14,16,28,29,30,RollCombo"
+LineNames="3,4,8,11,13,14,16,28,29,30,RollCombo"
 LineRollCombo="lua,ThemePrefRow('ComboOnRolls')"
 
 [ScreenAppearanceOptions]
