--- a/Characters/default/character.ini
+++ b/Characters/default/character.ini
@@ -1,10 +1,10 @@
 [Character]
-Level1Attack1=1.5x
-Level1Attack2=hidden
-Level1Attack3=reverse
-Level2Attack1=dizzy
-Level2Attack2=sudden
-Level2Attack3=expand
-Level3Attack1=0.5x
-Level3Attack2=drunk
-Level3Attack3=brake
+Level1Attack1=15% Tiny
+Level1Attack2=80% Hidden
+Level1Attack3=20% XMode, 30% Drunk
+Level2Attack1=70% Dizzy
+Level2Attack2=80% Sudden
+Level2Attack3=80% Wave
+Level3Attack1=25% Beat
+Level3Attack2=50% Drunk
+Level3Attack3=50% Boost
