update small new stuff, ActorUtil additions.

--- a/Themes/new/metrics.ini
+++ b/Themes/new/metrics.ini
@@ -20,300 +20,37 @@ HelpY=SCREEN_BOTTOM
 HelpOnCommand=draworder,150;
 HelpOffCommand=
 #
-TimerX=SCREEN_RIGHT-32
-TimerY=SCREEN_TOP+22
+TimerX=SCREEN_RIGHT
+TimerY=SCREEN_TOP
 TimerOnCommand=draworder,155;
 TimerOffCommand=
 # 
 ShowStageDisplay=true
-StageDisplayX=SCREEN_CENTER_X+128
-StageDisplayY=SCREEN_TOP+24
+StageDisplayX=SCREEN_CENTER_X
+StageDisplayY=SCREEN_TOP
 StageDisplayOnCommand=draworder,155
 StageDisplayOffCommand=
-[ScreenSelectMusic]
-MusicWheelX=SCREEN_CENTER_X+180
-MusicWheelY=SCREEN_CENTER_Y
+[ScreenTitleMenu]
+ScrollerX=SCREEN_CENTER_X
+ScrollerY=SCREEN_CENTER_Y*1.5
+ScrollerTransform=function(self,offset,itemIndex,numItems) \
+  self:y(24*(itemIndex-(numItems-1)/2)); \
+end
+ScrollerOnCommand=
+ScrollerOffCommand=
 #
-BannerX=SCREEN_CENTER_X-160
-BannerY=SCREEN_CENTER_Y-64-4
-BannerOnCommand=draworder,111;scaletoclipped,256,80
-BannerOffCommand=
+ScrollerItemX=0
+ScrollerItemY=0
+ScrollerItemOnCommand=finishtweening;diffuse,Color.Red
+ScrollerItemGainFocusCommand=stoptweening;linear,0.125;diffuse,Color.Blue;zoom,1;
+ScrollerItemLoseFocusCommand=stoptweening;linear,0.125;diffuse,Color.White;zoom,0.5;
 #
-ShowBannerFrame=true
-BannerFrameX=SCREEN_CENTER_X-128-32
-BannerFrameY=SCREEN_CENTER_Y-64-4
-BannerFrameOnCommand=draworder,110
-BannerFrameOffCommand=
-# 
-ShowStageDisplay=true
-StageDisplayX=SCREEN_CENTER_X-128-128+12
-StageDisplayY=SCREEN_CENTER_Y-64-64
-StageDisplayOnCommand=draworder,115;zoom,0.75
-StageDisplayOffCommand=
+LogoX=SCREEN_CENTER_X
+LogoY=SCREEN_CENTER_Y*0.5
+LogoOnCommand=
+LogoOffCommand=
 #
-ShowBPMDisplay=true
-BPMDisplayX=SCREEN_CENTER_X-256+12+160
-BPMDisplayY=SCREEN_CENTER_Y-64-64
-BPMDisplayOnCommand=draworder,115
-BPMDisplayOffCommand=
-#
-ShowTimeDisplay=true
-TimeDisplayX=SCREEN_CENTER_X-256+96+4
-TimeDisplayY=SCREEN_CENTER_Y-128-40
-TimeDisplayOnCommand=draworder,115;
-TimeDisplayOffCommand=
-#
-ShowSortDisplay=true
-SortDisplayX=SCREEN_CENTER_X-256+96+96+8
-SortDisplayY=SCREEN_CENTER_Y-128-40
-SortDisplayOnCommand=draworder,115;
-SortDisplayOffCommand=
-#
-ShowDifficultyList=true
-DifficultyListX=SCREEN_CENTER_X-128-64-64-32;
-DifficultyListY=SCREEN_CENTER_Y-96-32-4;
-DifficultyListOnCommand=draworder,115;
-DifficultyListOffCommand=
-#
-StepsDisplayP1X=SCREEN_CENTER_X-160
-StepsDisplayP1Y=SCREEN_CENTER_Y+184
-StepsDisplayP1OnCommand=draworder,155;
-StepsDisplayP1OffCommand=
-#
-StepsDisplayP2X=SCREEN_CENTER_X+160
-StepsDisplayP2Y=SCREEN_CENTER_Y+184
-StepsDisplayP2OnCommand=draworder,155;
-StepsDisplayP2OffCommand=
-#
-ShowPaneDisplay=true
-PaneDisplayX=SCREEN_CENTER_X-128-32+4
-PaneDisplayY=SCREEN_CENTER_Y
-PaneDisplayOnCommand=
-PaneDisplayOffCommand=
-#
-ShowPaneDisplayP1=true
-PaneDisplayP1X=
-PaneDisplayP1Y=
-PaneDisplayP1OnCommand=
-PaneDisplayP1OffCommand=
-#
-ShowPaneDisplayP2=true
-PaneDisplayP2X=
-PaneDisplayP2Y=
-PaneDisplayP2OnCommand=
-PaneDisplayP2OffCommand=
-#
-PlayerFrameP1X=SCREEN_CENTER_X-160
-PlayerFrameP1Y=SCREEN_CENTER_Y+184
-PlayerFrameP1OnCommand=draworder,155;diffuse,PlayerColor(PLAYER_1);
-PlayerFrameP1OffCommand=
-#
-PlayerFrameP2X=SCREEN_CENTER_X+160
-PlayerFrameP2Y=SCREEN_CENTER_Y+184
-PlayerFrameP2OnCommand=draworder,155;diffuse,PlayerColor(PLAYER_2);
-PlayerFrameP2OffCommand=
-[RollingNumbersBPMDisplay]
-TextFormat="%04.0f"
-ApproachSeconds=0.25
-Commify=false
-LeadingZeroMultiplyColor=color("#777777FF")
-[RollingNumbersTimeDisplay]
-TextFormat="%02f:02f"
-ApproachSeconds=0.25
-Commify=false
-LeadingZeroMultiplyColor=color("#777777FF")
-[MusicWheel]
-ItemTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
-  self:x( (1-math.cos(offsetFromCenter/math.pi))*96 ); \
-  self:y( offsetFromCenter*48); \
-end;
-NumWheelItems=11
-#
-MusicWheelSortOnCommand=
-MusicWheelSortOffCommand=
-MusicWheelItemSortOnCommand=
-MusicWheelItemSortOffCommand=
-#
-HighlightOnCommand=diffuseramp;effectclock,'beatnooffset';effectcolor1,ThemeColor.Primary
-HighlightOffCommand=
-[MusicWheelItem]
-WheelNotifyIconX=0
-WheelNotifyIconOnCommand=shadowlength,2;
-#
-SongNameX=-120
-SongNameY=1
-#
-CourseX=-120
-CourseOnCommand=maxwidth,208;horizalign,left
-#
-SectionExpandedX=-120
-SectionExpandedY=0
-SectionExpandedOnCommand=horizalign,left;zoom,0.875;maxwidth,200/0.875;skewx,-0.125;shadowlength,1;
-#
-SectionCollapsedX=-120
-SectionCollapsedY=0
-SectionCollapsedOnCommand=horizalign,left;zoom,0.875;maxwidth,200/0.875;skewx,-0.125;shadowlength,1;
-#
-SectionCountX=120-16
-SectionCountOnCommand=zoom,0.75;maxwidth,200/0.75;skewx,-0.125;shadowlength,1;strokecolor,Color("Outline")
-#
-RouletteOnCommand=maxwidth,400;shadowlength,1;basezoom,0.75;rainbowscroll,true;pulse;effectmagnitude,1,1.125,1;effectperiod,3
-#
-SortX=-120
-SortY=0
-SortOnCommand=horizalign,left;zoom,0.875;maxwidth,200/0.875;skewx,-0.125;shadowlength,1;
-#
-ModeX=-120
-ModeY=0
-ModeOnCommand=maxwidth,256;horizalign,left;strokecolor,Color("Outline")
-#
-GradeP1X=106+16
-GradeP1Y=0
-GradeP2X=110+16
-GradeP2Y=0
-[TextBanner]
-TitleOnCommand=horizalign,left;shadowlength,1;
-SubtitleOnCommand=horizalign,left;shadowlength,1;
-ArtistOnCommand=horizalign,left;shadowlength,1;skewx,-0.2
-ArtistPrependString=""
-
-[StepsDisplay]
-FrameLoadCommand=%function(self,param) end;
-#
-ShowTicks=true
-NumTicks=15
-MaxTicks=15
-TicksX=-56
-TicksY=12
-TicksOnCommand=shadowlength,0;horizalign,left;
-TicksSetCommand=%function(self,param) \
-  if param.CustomDifficulty then \
-      self:diffuse(CustomDifficultyToColor(param.CustomDifficulty)); \
-      self:strokecolor(CustomDifficultyToColor(param.CustomDifficulty)); \
-  end; \
-  if param.Meter then \
-    if param.Meter >= 10 then \
-      self:textglowmode("TextGlowMode_Inner"); \
-      self:glowramp(); \
-    else \
-      self:stopeffect(); \
-    end; \
-  end; \
-end;
-#
-ShowMeter=true
-MeterX=-40
-MeterY=-10
-MeterOnCommand=shadowlength,1;textglowmode,'TextGlowMode_Inner'
-MeterSetCommand=%function(self,param) \
-	if param.CustomDifficulty then \
-		self:diffuse(CustomDifficultyToColor(param.CustomDifficulty)); \
-	end; \
-	if param.Meter then \
-		if param.Meter >= 100 then \
-			self:basezoom(0.8); \
-			self:glowramp(); \
-		elseif param.Meter >= 10 then \
-			self:basezoom(1); \
-			self:glowramp(); \
-		else \
-			self:basezoom(1); \
-			self:stopeffect(); \
-		end; \
-	end; \
-    self:settextf("%02i", param.Meter); \
-end;
-#
-ShowDescription=true
-DescriptionX=-24
-DescriptionY=-1.5
-DescriptionOnCommand=shadowlength,1;uppercase,true;zoom,0.625;maxwidth,184;horizalign,left;vertalign,bottom;
-DescriptionSetCommand=%function(self,param) \
-	if self:GetText() == "" then \
-		self:settext("Edit"); \
-	end; \
-	if param.CustomDifficulty then \
-		self:diffuse(CustomDifficultyToColor(param.CustomDifficulty)); \
-	end; \
-end;
-#
-ShowAutogen=false
-AutogenX=40-32
-AutogenY=0
-AutogenOnCommand=
-AutogenSetCommand=%function(self,param) if param.Difficulty then self:diffuse(CustomDifficultyToLightColor(param.Difficulty)); self:strokecolor(CustomDifficultyToDarkColor(param.Difficulty)); end end
-#
-ShowStepsType=false
-StepsTypeX=-20-32
-StepsTypeY=7
-StepsTypeOnCommand=zoom,0.45
-[DifficultyList]
-ItemsSpacingY=16
-NumShownItems=5
-[StepsDisplayListRow]
-# TODO: Make this use DifficultyList?
-CapitalizeDifficultyNames=false
-NumShownItems=5
-ItemsSpacingY=16
-MoveCommand=
-FrameX=
-FrameY=
-FrameOnCommand=zoomto,60,14;
-FrameOffCommand=
-FrameSetCommand=%function(self,param) \
-	if param.CustomDifficulty then \
-		self:diffuse(ColorMidTone( CustomDifficultyToColor(param.CustomDifficulty) )); \
-	else \
-		self:diffuse(color('1,1,1,1')); \
-	end; \
-end;
-#
-NumTicks=10
-MaxTicks=10
-#
-ShowMeter=true
-MeterX=0
-MeterOnCommand=zoom,0.75;
-MeterSetCommand=%function(self,param) \
-	if param.CustomDifficulty then \
-		self:diffuse(CustomDifficultyToColor(param.CustomDifficulty)); \
-		self:shadowcolor(CustomDifficultyToDarkColor(param.CustomDifficulty)); \
-	end; \
-end;
-#
-ShowDescription=false
-DescriptionX=0
-DescriptionOnCommand=0
-DescriptionSetCommand=%function(self,param) \
-	if self:GetText() == "" then \
-		self:settext("Edit"); \
-	end; \
-	if param.CustomDifficulty then \
-		self:diffuse(CustomDifficultyToColor(param.CustomDifficulty)); \
-		self:shadowcolor(CustomDifficultyToDarkColor(param.CustomDifficulty)); \
-	end; \
-end;
-#
-ShowAutogen=false
-AutogenX=0
-AutogenY=0
-AutogenOnCommand=
-#
-ShowStepsType=false
-StepsTypeX=0
-StepsTypeY=0
-StepsTypeOnCommand=
-StepsTypeSetCommand=
-[ScreenGameplay]
-LifeP1OnCommand=draworder,105
-LifeP2OnCommand=draworder,105
-#
-ScoreP1X=THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
-ScoreP1Y=SCREEN_BOTTOM-48
-ScoreP1OnCommand=draworder,105
-ScoreP1OffCommand=
-#
-ScoreP2X=THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
-ScoreP2Y=SCREEN_BOTTOM-48
-ScoreP2OnCommand=draworder,105
-ScoreP2OffCommand=
+VersionX=SCREEN_RIGHT-24
+VersionY=SCREEN_TOP+24.5
+VersionOnCommand=shadowlength,2;horizalign,right;vertalign,top;zoom,0.5
+VersionOffCommand=
