--- a/Themes/new/metrics.ini
+++ b/Themes/new/metrics.ini
@@ -31,6 +31,7 @@ StageDisplayY=SCREEN_TOP
 StageDisplayOnCommand=draworder,155
 StageDisplayOffCommand=
 [ScreenTitleMenu]
+# Menu Items
 ScrollerX=SCREEN_CENTER_X
 ScrollerY=SCREEN_CENTER_Y*1.5
 ScrollerTransform=function(self,offset,itemIndex,numItems) \
@@ -41,12 +42,12 @@ ScrollerOffCommand=
 #
 ScrollerItemX=0
 ScrollerItemY=0
-ScrollerItemOnCommand=finishtweening;diffuse,Color.Red
+ScrollerItemOnCommand=finishtweening;shadowlength,2;strokecolor,Color.Black;
 ScrollerItemGainFocusCommand=stoptweening;linear,0.125;diffuse,Color.Blue;zoom,1;
 ScrollerItemLoseFocusCommand=stoptweening;linear,0.125;diffuse,Color.White;zoom,0.5;
-#
+# Logo
 LogoX=SCREEN_CENTER_X
-LogoY=SCREEN_CENTER_Y*0.5
+LogoY=SCREEN_CENTER_Y*0.75
 LogoOnCommand=
 LogoOffCommand=
 #
@@ -54,3 +55,5 @@ VersionX=SCREEN_RIGHT-24
 VersionY=SCREEN_TOP+24.5
 VersionOnCommand=shadowlength,2;horizalign,right;vertalign,top;zoom,0.5
 VersionOffCommand=
+
+[ScreenSelectStyle]
