/new: practically 1:1 to 3.9 title menu. + default transitions + better system underlay solution + thanks koizu best logo ever

--- a/Themes/new/metrics.ini
+++ b/Themes/new/metrics.ini
@@ -1,37 +1,52 @@
 # sm-ssc default theme | created by the spinal shark collective
 [Global]
 FallbackTheme=_fallback
+[ScreenSystemLayer]
+# P1 Credits Text
+CreditsP1X=SCREEN_LEFT+10
+CreditsP1Y=SCREEN_BOTTOM-10
+CreditsP1OnCommand=horizalign,left;vertalign,bottom;zoom,0.675;shadowlength,1;diffusebottomedge,PlayerColor(PLAYER_1);
+# P2 Credits Text
+CreditsP2OnCommand=horizalign,right;vertalign,bottom;zoom,0.675;shadowlength,1;diffusebottomedge,PlayerColor(PLAYER_2);
+CreditsP2X=SCREEN_RIGHT-10
+CreditsP2Y=SCREEN_BOTTOM-10
 [ScreenWithMenuElements]
+# Custom underlay that is over everything else! fantastic for cool effects and depth of field or something
+CustomOverlayX=SCREEN_LEFT
+CustomOverlayY=SCREEN_TOP
+CustomOverlayOnCommand=
+CustomOverlayOffCommand=
+# Header Background
 ShowHeader=true
 HeaderX=SCREEN_LEFT
 HeaderY=SCREEN_TOP
 HeaderOnCommand=draworder,150;
 HeaderOffCommand=
-#
+# Footer Background
 ShowFooter=true
 FooterX=SCREEN_LEFT
 FooterY=SCREEN_BOTTOM
 FooterOnCommand=draworder,150;
 FooterOffCommand=
-#
+# Help text on bottom of screen
 ShowHelp=true
 HelpX=SCREEN_LEFT
 HelpY=SCREEN_BOTTOM
 HelpOnCommand=draworder,150;
 HelpOffCommand=
-#
+# The menu timer
 TimerX=SCREEN_RIGHT
 TimerY=SCREEN_TOP
 TimerOnCommand=draworder,155;
 TimerOffCommand=
-# 
+# Shows what stage you are on
 ShowStageDisplay=true
 StageDisplayX=SCREEN_CENTER_X
 StageDisplayY=SCREEN_TOP
 StageDisplayOnCommand=draworder,155
 StageDisplayOffCommand=
 [ScreenTitleMenu]
-# Menu Items
+# Menu Items container,
 ScrollerX=SCREEN_CENTER_X
 ScrollerY=SCREEN_CENTER_Y*1.5
 ScrollerTransform=function(self,offset,itemIndex,numItems) \
@@ -39,21 +54,25 @@ ScrollerTransform=function(self,offset,itemIndex,numItems) \
 end
 ScrollerOnCommand=
 ScrollerOffCommand=
-#
+# The items inside the scroller!
 ScrollerItemX=0
 ScrollerItemY=0
-ScrollerItemOnCommand=finishtweening;shadowlength,2;strokecolor,Color.Black;
+ScrollerItemOnCommand=finishtweening;shadowlength,1;strokecolor,Color.Outline;
 ScrollerItemGainFocusCommand=stoptweening;linear,0.125;diffuse,Color.Blue;zoom,1;
 ScrollerItemLoseFocusCommand=stoptweening;linear,0.125;diffuse,Color.White;zoom,0.5;
 # Logo
 LogoX=SCREEN_CENTER_X
 LogoY=SCREEN_CENTER_Y*0.75
-LogoOnCommand=
+LogoOnCommand=wag;effectmagnitude,4,0,0;
 LogoOffCommand=
 #
 VersionX=SCREEN_RIGHT-24
 VersionY=SCREEN_TOP+24.5
-VersionOnCommand=shadowlength,2;horizalign,right;vertalign,top;zoom,0.5
+VersionOnCommand=shadowlength,1;horizalign,right;vertalign,top;zoom,0.5625
 VersionOffCommand=
-
+#
+NumSongsX=SCREEN_LEFT+24
+NumSongsY=SCREEN_TOP+24.5
+NumSongsOnCommand=shadowlength,1;horizalign,left;vertalign,top;zoom,0.5625
+NumSongsOffCommand=
 [ScreenSelectStyle]
