[ScreenDebugOverlay] Added BackgroundColor metric.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1504,6 +1504,8 @@ ShowCreditDisplay=false
 Class="ScreenDebugOverlay"
 Fallback="Screen"
 
+BackgroundColor=color("0,0,0,0.5")
+
 LineOnColor=color("1,1,1,1")
 LineOffColor=color("0.6,0.6,0.6,1")
 LineStartY=SCREEN_TOP+50
