--- a/Themes/new/metrics.ini
+++ b/Themes/new/metrics.ini
@@ -18,33 +18,53 @@ CustomOverlayOnCommand=
 CustomOverlayOffCommand=
 # Header Background
 ShowHeader=true
-HeaderX=SCREEN_LEFT
+HeaderX=SCREEN_CENTER_X
 HeaderY=SCREEN_TOP
-HeaderOnCommand=draworder,150;
+HeaderOnCommand=
 HeaderOffCommand=
+# Additional Header Text
+ShowTextHeader=true
+TextHeaderX=SCREEN_LEFT+16
+TextHeaderY=SCREEN_TOP+16
+TextHeaderOnCommand=horizalign,left;strokecolor,Color.Outline;
+TextHeaderOffCommand=
+# Subtitle Header Text
+ShowTextSubtitle=true
+TextSubtitleX=SCREEN_LEFT+16
+TextSubtitleY=SCREEN_TOP+36
+TextSubtitleOnCommand=horizalign,left;zoom,0.5;shadowlength,1
+TextSubtitleOffCommand=
 # Footer Background
 ShowFooter=true
-FooterX=SCREEN_LEFT
-FooterY=SCREEN_BOTTOM
-FooterOnCommand=draworder,150;
+FooterX=SCREEN_CENTER_X
+FooterY=SCREEN_BOTTOM-32
+FooterOnCommand=
 FooterOffCommand=
 # Help text on bottom of screen
 ShowHelp=true
 HelpX=SCREEN_LEFT
 HelpY=SCREEN_BOTTOM
-HelpOnCommand=draworder,150;
+HelpOnCommand=
 HelpOffCommand=
 # The menu timer
-TimerX=SCREEN_RIGHT
-TimerY=SCREEN_TOP
-TimerOnCommand=draworder,155;
+TimerX=SCREEN_RIGHT-32-8
+TimerY=SCREEN_TOP+24
+TimerOnCommand=draworder,105
 TimerOffCommand=
 # Shows what stage you are on
 ShowStageDisplay=true
 StageDisplayX=SCREEN_CENTER_X
 StageDisplayY=SCREEN_TOP
-StageDisplayOnCommand=draworder,155
+StageDisplayOnCommand=
 StageDisplayOffCommand=
+[MenuTimer]
+Text1OnCommand=stopeffect;stoptweening;halign,1;shadowlength,0;strokecolor,Color.Outline
+Text1FormatFunction=function(fSeconds) fSeconds=math.floor(fSeconds); return string.format("%02.0f",fSeconds) end
+
+Text2OnCommand=x,2;y,-3;stopeffect;stoptweening;halign,0;shadowlength,0;strokecolor,Color.Outline;zoom,0.65
+Text2FormatFunction=function(fSeconds) local remainder=fSeconds-math.floor(fSeconds); local digit=math.floor(remainder*100); return string.format("%02.0f",digit) end
+
+Warning10Command=diffuseshift;effectperiod,1;effectcolor2,Color.Red;effectcolor1,Color.White;
 [ScreenTitleMenu]
 # Menu Items container,
 ScrollerX=SCREEN_CENTER_X
@@ -67,12 +87,97 @@ LogoOnCommand=wag;effectmagnitude,4,0,0;
 LogoOffCommand=
 #
 VersionX=SCREEN_RIGHT-24
-VersionY=SCREEN_TOP+24.5
+VersionY=SCREEN_TOP+16.5
 VersionOnCommand=shadowlength,1;horizalign,right;vertalign,top;zoom,0.5625
 VersionOffCommand=
 #
 NumSongsX=SCREEN_LEFT+24
-NumSongsY=SCREEN_TOP+24.5
+NumSongsY=SCREEN_TOP+16.5
 NumSongsOnCommand=shadowlength,1;horizalign,left;vertalign,top;zoom,0.5625
 NumSongsOffCommand=
 [ScreenSelectStyle]
+UpdateOnMesage=""
+#
+FOV=90
+#
+PerChoiceScrollElement=false
+PerChoiceIconElement=false
+#
+Choice7Keys="name,7Keys;style,single7;screen,"..Branch.AfterSelectStyle()
+Choice10Keys="name,10Keys;style,double5;screen,"..Branch.AfterSelectStyle()
+Choice14Keys="name,14Keys;style,double7;screen,"..Branch.AfterSelectStyle()
+ChoiceKB7="name,kb7;style,single;screen,"..Branch.AfterSelectStyle()
+#
+ShowScroller=false
+ShowIcon=true
+ShowCursor=true
+WrapScroller=false
+UseIconMetrics=true
+#
+CursorP1OffsetXFromIcon=-40
+CursorP1OffsetYFromIcon=-40
+CursorP2OffsetXFromIcon=0
+CursorP2OffsetYFromIcon=0
+#
+IconGainFocusCommand=stoptweening;bounceend,0.125;zoom,1;
+IconLoseFocusCommand=stoptweening;decelerate,0.25;zoom,0.8;
+#
+IconChoiceSingleX=SCREEN_CENTER_X-(104*2)
+IconChoiceSingleY=SCREEN_BOTTOM-32-28
+IconChoiceSingleOnCommand=zoom,0;bounceend,0.35;zoom,1
+IconChoiceSingleOffCommand=linear,0.1175;zoomx,0
+#
+IconChoiceDoubleX=SCREEN_CENTER_X
+IconChoiceDoubleY=SCREEN_BOTTOM-32-28
+IconChoiceDoubleOnCommand=zoom,0;bounceend,0.35;zoom,1
+IconChoiceDoubleOffCommand=linear,0.1175;zoomx,0
+####
+IconChoiceSoloX=SCREEN_CENTER_X-(104*1)
+IconChoiceSoloY=SCREEN_BOTTOM-32-28
+IconChoiceSoloOnCommand=zoom,0;bounceend,0.35;zoom,1
+IconChoiceSoloOffCommand=linear,0.1175;zoomx,0
+#
+IconChoiceHalfDoubleX=SCREEN_CENTER_X-160
+IconChoiceHalfDoubleY=SCREEN_CENTER_Y+96
+IconChoiceHalfDoubleOnCommand=zoom,0;bounceend,0.35;zoom,1
+IconChoiceHalfDoubleOffCommand=linear,0.1175;zoomx,0
+####
+IconChoiceVersusX=SCREEN_CENTER_X+(104)
+IconChoiceVersusY=SCREEN_BOTTOM-32-28
+IconChoiceVersusOnCommand=zoom,0;bounceend,0.35;zoom,1
+IconChoiceVersusOffCommand=linear,0.1175;zoomx,0
+#
+IconChoiceCoupleX=SCREEN_CENTER_X+(104*2)
+IconChoiceCoupleY=SCREEN_BOTTOM-32-28
+IconChoiceCoupleOnCommand=zoom,0;bounceend,0.35;zoom,1
+IconChoiceCoupleOffCommand=linear,0.1175;zoomx,0
+#
+IconChoiceRoutineX=SCREEN_CENTER_X+160
+IconChoiceRoutineY=SCREEN_CENTER_Y+96
+IconChoiceRoutineOnCommand=zoom,0;bounceend,0.35;zoom,1
+IconChoiceRoutineOffCommand=linear,0.1175;zoomx,0
+#
+IconChoicekb7X=SCREEN_CENTER_X
+IconChoicekb7Y=SCREEN_CENTER_Y
+IconChoicekb7OnCommand=zoom,0;bounceend,0.35;zoom,1
+IconChoicekb7OffCommand=linear,0.1175;zoomx,0
+#
+IconChoice5KeysX=SCREEN_CENTER_X-160
+IconChoice5KeysY=SCREEN_CENTER_Y-48
+IconChoice5KeysOnCommand=zoom,0;bounceend,0.35;zoom,1
+IconChoice5KeysOffCommand=linear,0.1175;zoomx,0
+#
+IconChoice7KeysX=SCREEN_CENTER_X-160
+IconChoice7KeysY=SCREEN_CENTER_Y+48
+IconChoice7KeysOnCommand=zoom,0;bounceend,0.35;zoom,1
+IconChoice7KeysOffCommand=linear,0.1175;zoomx,0
+#
+IconChoice10KeysX=SCREEN_CENTER_X+160
+IconChoice10KeysY=SCREEN_CENTER_Y-48
+IconChoice10KeysOnCommand=zoom,0;bounceend,0.35;zoom,1
+IconChoice10KeysOffCommand=linear,0.1175;zoomx,0
+#
+IconChoice14KeysX=SCREEN_CENTER_X+160
+IconChoice14KeysY=SCREEN_CENTER_Y+48
+IconChoice14KeysOnCommand=zoom,0;bounceend,0.35;zoom,1
+IconChoice14KeysOffCommand=linear,0.1175;zoomx,0
