theme updates, made a few things faster; makes the game look far smoother than most people realize.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2431,16 +2431,19 @@ Insert,5="mod,skippy;name,Skippy"
 Insert,6="mod,echo;name,Echo"
 Insert,7="mod,stomp;name,Stomp"
 
-Remove="8;selectmultiple"
-RemoveDefault="mod,no little,no nojumps,no nohands,no noquads,no nostretch,no norolls,no nolifts,no nofakes"
-Remove,1="mod,little;name,Little"
-Remove,2="mod,nojumps;name,NoJumps"
-Remove,3="mod,nohands;name,NoHands"
-Remove,4="mod,noquads;name,NoQuads"
-Remove,5="mod,nostretch;name,NoStretch"
-Remove,6="mod,norolls;name,NoRolls"
-Remove,7="mod,nolifts;name,NoLifts"
-Remove,8="mod,nofakes;name,NoFakes"
+RemoveCombinations="4;selectmultiple"
+RemoveCombinationsDefault="mod,no little,no nojumps,no nohands,no noquads"
+RemoveCombinations,1="mod,little;name,Little"
+RemoveCombinations,2="mod,nojumps;name,NoJumps"
+RemoveCombinations,3="mod,nohands;name,NoHands"
+RemoveCombinations,4="mod,noquads;name,NoQuads"
+
+RemoveFeatures="4;selectmultiple"
+RemoveFeaturesDefault="mod,no nostretch,no norolls,no nolifts,no nofakes"
+RemoveFeatures,1="mod,nostretch;name,NoStretch"
+RemoveFeatures,2="mod,norolls;name,NoRolls"
+RemoveFeatures,3="mod,nolifts;name,NoLifts"
+RemoveFeatures,4="mod,nofakes;name,NoFakes"
 
 # Insert="8"
 # InsertDefault="mod,no little,no wide,no big,no quick,no skippy,no echo,no stomp"
@@ -3054,7 +3057,7 @@ PlayMusic=false
 #
 TimerSeconds=30
 #
-LineNames="1,2,3A,3B,4,5,6,R,7,8,9,10,11,12,13,14,16,17"
+LineNames="1,2,3A,3B,4,5,6,R1,R2,7,8,9,10,11,12,13,14,16,17"
 Line1="lua,SpeedMods()"
 # Line1="list,Speed"
 Line2="list,Accel"
@@ -3065,6 +3068,8 @@ Line4="list,Appearance"
 Line5="list,Turn"
 Line6="list,Insert"
 LineR="list,Remove"
+LineR1="list,RemoveCombinations"
+LineR2="list,RemoveFeatures"
 Line7="list,Scroll"
 Line8="list,NoteSkins"
 Line9="list,Holds"
