--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -162,7 +162,18 @@ TitleOnCommand=shadowlength,0;skewx,-0.1;uppercase,true;wrapwidthpixels,136;maxh
 TitleGainFocusCommand=stoptweening;zoom,0.6375*1.125;bounceend,0.2;diffuse,Color("Orange");diffusetopedge,BoostColor(Color("Orange"),1.5);strokecolor,Color("Black");zoom,0.6375;
 # TitleGainFocusCommand=stoptweening;zoom,0.6375*1.25;bounceend,0.2;diffuse,Color("Orange");diffusetopedge,BoostColor(Color("Orange"),1.5);strokecolor,Color("Black");zoom,0.6375;thump;effectmagnitude,1,1.05,1;effectclock,'beat'
 TitleLoseFocusCommand=diffuse,Color("White");strokecolor,Color("Black");stopeffect;
-
+#
+ItemsStartX=SCREEN_CENTER_X-140
+ItemsEndX=SCREEN_CENTER_X+130
+ItemsGapX=12
+ItemsMinBaseZoom=0.5
+ItemsLongRowP1X=SCREEN_CENTER_X-60
+ItemsLongRowP2X=SCREEN_CENTER_X+100
+ItemsLongRowSharedX=SCREEN_CENTER_X
+ItemOnCommand=shadowlength,1;zoom,0.55
+ItemGainFocusCommand=
+ItemLoseFocusCommand=
+TweenSeconds=0.1
 [OptionRowService]
 
 [OptionRowExit]
@@ -801,13 +812,13 @@ WrapScroller=true
 ScrollerX=SCREEN_CENTER_X
 ScrollerY=SCREEN_CENTER_Y-60
 ScrollerOnCommand=SetFastCatchup,true;
-ScrollerOffCommand=decelerate,0.8;y,SCREEN_CENTER_Y;sleep,2;linear,0.1;zoomy,0
+ScrollerOffCommand=decelerate,0.8;y,SCREEN_CENTER_Y;sleep,1.5;linear,0.1;zoomy,0
 #
 ShowBackgroundFrame=true
 BackgroundFrameX=SCREEN_CENTER_X
 BackgroundFrameY=SCREEN_CENTER_Y-60
 BackgroundFrameOnCommand=diffuse,Color("Black");diffusealpha,0.7
-BackgroundFrameOffCommand=decelerate,0.8;y,SCREEN_CENTER_Y;sleep,2;linear,0.1;zoomy,0
+BackgroundFrameOffCommand=decelerate,0.8;y,SCREEN_CENTER_Y;sleep,1.5;linear,0.1;zoomy,0
 #
 ShowIcon=true
 UseIconMetrics=true
@@ -949,6 +960,8 @@ BPMLabelOffCommand=bouncebegin,0.15;zoomx,0;
 ShowSegmentDisplay=not GAMESTATE:IsCourseMode()
 SegmentDisplayX=SCREEN_CENTER_X-160
 SegmentDisplayY=SCREEN_TOP+160-36+4
+SegmentDisplayOnCommand=addx,-SCREEN_CENTER_X;decelerate,0.35;addx,SCREEN_CENTER_X
+SegmentDisplayOffCommand=bouncebegin,0.15;zoomx,0;
 #
 ShowDifficultyList=not GAMESTATE:IsCourseMode();
 DifficultyListX=SCREEN_CENTER_X-160
@@ -1195,6 +1208,8 @@ StepsTypeY=7
 StepsTypeOnCommand=zoom,0.45
 
 [ScreenOptions]
+CursorTweenSeconds=0.1
+
 DisqualifyP1X=SCREEN_CENTER_X-176
 DisqualifyP1Y=SCREEN_BOTTOM-98
 DisqualifyP1OnCommand=draworder,100;zoom,0.5;shadowlength,1;player,PLAYER_1
@@ -1208,7 +1223,33 @@ CursorOnCommand=
 LineHighlightOnCommand=cropleft,0.1;cropright,0.1;zoomx,1.25;fadeleft,0.05;faderight,0.05;diffuseshift;effectcolor2,color("1,1,1,0.5");effectcolor1,color("1,1,1,0.25");effectclock,'beat'
 LineHighlightChangeCommand=linear,0.1;diffuse,Color("White");diffuseshift;effectcolor2,color("1,1,1,0.5");effectcolor1,color("1,1,1,0.25")
 LineHighlightChangeToExitCommand=linear,0.1;diffuse,Color("Red");diffuseshift;effectcolor2,color("1,0,0,0.5");effectcolor1,color("1,0,0,0.25")
-
+#
+LineHighlightP1OnCommand=diffuse,PlayerColor(PLAYER_1);diffusealpha,0.65;zoomtowidth,500;fadeleft,0.45;faderight,0.45;
+LineHighlightP1ChangeCommand=finishtweening;diffusealpha,0.65;
+LineHighlightP1ChangeToExitCommand=finishtweening;diffusealpha,0.15;
+LineHighlightP2OnCommand=diffuse,PlayerColor(PLAYER_2);diffusealpha,0.65;zoomtowidth,500;fadeleft,0.45;faderight,0.45;
+LineHighlightP2ChangeCommand=finishtweening;diffusealpha,0.65;
+LineHighlightP2ChangeToExitCommand=finishtweening;diffusealpha,0.15;
+#
+ShowScrollBar=true
+ScrollBarHeight=320
+ScrollBarTime=0.1
+ScrollBarX=SCREEN_CENTER_X+256+44
+ScrollBarY=SCREEN_CENTER_Y-24
+#
+ShowExplanations=true
+ExplanationP1X=SCREEN_CENTER_X-256-20
+ExplanationP1Y=SCREEN_CENTER_Y+174
+ExplanationP1OnCommand=diffuse,PlayerColor(PLAYER_1);shadowlength,1;wrapwidthpixels,256/0.5;zoom,0.5;halign,0;cropright,1;linear,0.5;cropright,0
+ExplanationP1OffCommand=
+ExplanationP2X=SCREEN_CENTER_X+256+20
+ExplanationP2Y=SCREEN_CENTER_Y+174
+ExplanationP2OnCommand=diffuse,PlayerColor(PLAYER_2);shadowlength,1;wrapwidthpixels,256/0.5;zoom,0.5;halign,1;cropright,1;linear,0.5;cropright,0
+ExplanationP2OffCommand=
+ExplanationTogetherX=SCREEN_CENTER_X
+ExplanationTogetherY=SCREEN_CENTER_Y+184
+ExplanationTogetherOnCommand=shadowlength,0;zoom,0.75;wrapwidthpixels,(SCREEN_WIDTH*0.9375)*1.25;cropright,1;linear,0.5;cropright,0
+ExplanationTogetherOffCommand=stoptweening
 [ScreenOptionsMaster]
 
 [ScreenOptionsSimple]
@@ -1322,7 +1363,7 @@ LineFancyUIBG="lua,ThemePrefRow('FancyUIBG')"
 [ScreenReloadSongs]
 
 [ScreenPlayerOptions]
-LineNames="1,8,14,2,3A,3B,4,5,6,R,7,9,10,11,12,13,SF,17,16"
+LineNames="1,8,14,2,3A,3B,4,5,6,R1,R2,7,9,10,11,12,13,SF,17,16"
 LineSF="lua,OptionRowScreenFilter()"
 Line17="lua,OptionRowProTiming()"
 Line18="list,Characters"
@@ -1480,12 +1521,12 @@ StepsDescriptionP2OffCommand=
 PlayerOptionsP1X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 # PlayerOptionsP1X=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 PlayerOptionsP1Y=SCREEN_CENTER_Y+82
-PlayerOptionsP1OnCommand=draworder,101;vertalign,top;wrapwidthpixels,256*2;zoom,0.5;diffusealpha,0;addy,10;smooth,0.3;diffusealpha,1;addy,-10;sleep,3;smooth,0.5;addy,10;diffusealpha,0
+PlayerOptionsP1OnCommand=draworder,101;shadowlength,1;vertalign,top;wrapwidthpixels,256*2;zoom,0.5;diffusealpha,0;addy,10;smooth,0.3;diffusealpha,1;addy,-10;sleep,3;smooth,0.5;addy,10;diffusealpha,0
 PlayerOptionsP1OffCommand=
 PlayerOptionsP2X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 # PlayerOptionsP2X=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 PlayerOptionsP2Y=SCREEN_CENTER_Y+82
-PlayerOptionsP2OnCommand=draworder,101;vertalign,top;wrapwidthpixels,256*2;zoom,0.5;diffusealpha,0;addy,10;smooth,0.3;diffusealpha,1;addy,-10;sleep,3;smooth,0.5;addy,10;diffusealpha,0
+PlayerOptionsP2OnCommand=draworder,101;shadowlength,1;vertalign,top;wrapwidthpixels,256*2;zoom,0.5;diffusealpha,0;addy,10;smooth,0.3;diffusealpha,1;addy,-10;sleep,3;smooth,0.5;addy,10;diffusealpha,0
 PlayerOptionsP2OffCommand=
 #
 StepsDisplayP1X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
