--- a/Themes/test/metrics.ini
+++ b/Themes/test/metrics.ini
@@ -2,10 +2,11 @@
 FallbackTheme=default
 [ScreenTitleMenu]
 # new scroll for wrapping
+ScrollerY=SCREEN_CENTER_Y*1.25
 ScrollerTransform=function(self,offset,itemIndex,numItems) \
 	self:y((28)*(itemIndex-(numItems-1)/2)); \
-	self:x(math.floor(itemIndex/5) * 128); \
 end;
+# --self:y((28)*(itemIndex-(numItems-1)/2));
 # more choices for debug stuff
 DefaultChoice="GameStart"
 # new stuff
