Remove in edit, dont need that many colors.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -84,7 +84,7 @@ OMESPlayerModifiers="default,1.5x,reverse"
 OMESStageModifiers="failimmediate,suddendeath"
 
 # How many different colors you can have in the MusicWheel
-NumSongGroupColors=10
+NumSongGroupColors=1
 NumCourseGroupColors=1
 # Legacy metric: how difficult a song has to be for it to glow.
 ExtraColorMeter=GetExtraColorThreshold()
@@ -3946,7 +3946,7 @@ PlayMusic=false
 TimerSeconds=-1
 ShowStyleIcon=false
 
-LineNames="1,2,3,4,5,6,R,7,8,9,10,Attacks,11,12,13,14,15,16"
+LineNames="1,2,3,4,5,6,R1,R2,7,8,9,10,Attacks,11,12,13,14,15,16"
 # uses legacy speed line
 Line1="list,Speed"
 Line2="list,Accel"
@@ -3954,7 +3954,8 @@ Line3="list,Effect"
 Line4="list,Appearance"
 Line5="list,Turn"
 Line6="list,Insert"
-LineR="list,Remove"
+LineR1="list,RemoveCombinations"
+LineR2="list,RemoveFeatures"
 Line7="list,Scroll"
 Line8="list,NoteSkins"
 Line9="list,Holds"
