--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -12,16 +12,9 @@ AutoSetStyle=ThemePrefs.Get("AutoSetStyle")
 [ProfileManager]
 
 [SongManager]
-SongGroupColor1=BoostColor(Color("Orange"),1.2)
-SongGroupColor2=BoostColor(Color("Orange"),1.25)
-SongGroupColor3=BoostColor(Color("Orange"),1.25)
-SongGroupColor4=BoostColor(Color("Orange"),1.25)
-SongGroupColor5=BoostColor(Color("Orange"),1.25)
-SongGroupColor6=BoostColor(Color("Orange"),1.25)
-SongGroupColor7=BoostColor(Color("Orange"),1.25)
-SongGroupColor8=BoostColor(Color("Orange"),1.25)
-SongGroupColor9=BoostColor(Color("Orange"),1.25)
-SongGroupColor10=BoostColor(Color("Orange"),1.25)
+NumSongGroupColors=1
+#
+SongGroupColor1=BoostColor(Color("Orange"),1.25)
 
 CourseGroupColor1=color("1,1,1,1")
 
@@ -116,8 +109,14 @@ ItemsSpacingY=24
 NumShownItems=8
 
 [FadingBanner]
-BannerFadeFromCachedCommand=diffusealpha,1;stoptweening;accelerate,0.05;glow,Color.Alpha( Color("White"), 0.45 );decelerate,0.175;diffusealpha,0;glow,Color("Invisible");
+BannerFadeFromCachedCommand=diffusealpha,1;stoptweening;accelerate,0.05;glow,Color.Alpha( Color("White"), 0.45 );decelerate,0.075;diffusealpha,0;glow,Color("Invisible");
+BannerOnCommand=
+BannerFadeFromCachedCommand=diffusealpha,1;stoptweening;linear,0.15;glow,Color.Alpha(Color("White"),0.25);decelerate,0.15;glow,Color.Invisible;diffusealpha,0
+BannerFadeOffCommand=diffusealpha,1;stoptweening;linear,0.15;diffusealpha,0
+BannerResetFadeCommand=diffusealpha,1
 
+BannerRouletteCommand=
+BannerRandomCommand=
 [Gameplay]
 
 [GameState]
@@ -228,8 +227,12 @@ Warning10Command=diffuseshift;effectperiod,1;effectcolor2,Color("Red");effectcol
 [MenuTimerNoSound]
 
 [MusicWheel]
-SwitchSeconds=0.08
+SwitchSeconds=0.04
 LockedInitialVelocity=7
+
+RouletteSwitchSeconds=0.04
+RouletteSlowDownSwitches=5
+LockedInitialVelocity=15
 
 ; linear wheel example:
 ;	ItemTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
