--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1480,11 +1480,11 @@ SongNumberP2OnCommand=zoom,0.75;diffuse,PlayerColor(PLAYER_2);strokecolor,BoostC
 SongNumberP2OffCommand=
 #
 RemainingTimeP1X=THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX") + 32
-RemainingTimeP1Y=THEME:GetMetric(Var "LoadingScreen","ScoreP1Y") - 22
+RemainingTimeP1Y=THEME:GetMetric(Var "LoadingScreen","ScoreP1Y") - 20
 RemainingTimeP1OnCommand=shadowlength,1;diffuse,PlayerColor(PLAYER_1);diffusebottomedge,ColorMidTone(PlayerColor(PLAYER_1));
 RemainingTimeP1OffCommand=
 RemainingTimeP2X=THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX") + 32
-RemainingTimeP2Y=THEME:GetMetric(Var "LoadingScreen","ScoreP2Y") - 22
+RemainingTimeP2Y=THEME:GetMetric(Var "LoadingScreen","ScoreP2Y") - 20
 RemainingTimeP2OnCommand=shadowlength,1;diffuse,PlayerColor(PLAYER_2);diffusebottomedge,ColorMidTone(PlayerColor(PLAYER_2));
 RemainingTimeP2OffCommand=
 #
@@ -1502,12 +1502,12 @@ DeltaSecondsP2OffCommand=
 ScoreP1X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 # ScoreP1X=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 ScoreP1Y=SCREEN_BOTTOM-28
-ScoreP1OnCommand=draworder,101;visible,ThemePrefs.Get("GameplayShowScore");diffuse,PlayerColor(PLAYER_1);sleep,3+0.3;smooth,0.5;y,SCREEN_BOTTOM-50
+ScoreP1OnCommand=draworder,101;visible,not GAMESTATE:GetCurrentCourse():GetCourseType() == "CourseType_Survival" and ThemePrefs.Get("GameplayShowScore");diffuse,PlayerColor(PLAYER_1);sleep,3+0.3;smooth,0.5;y,SCREEN_BOTTOM-48
 ScoreP1OffCommand=
 ScoreP2X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 # ScoreP2X=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 ScoreP2Y=SCREEN_BOTTOM-28
-ScoreP2OnCommand=draworder,101;visible,ThemePrefs.Get("GameplayShowScore");diffuse,PlayerColor(PLAYER_2);sleep,3+0.3;smooth,0.5;y,SCREEN_BOTTOM-50
+ScoreP2OnCommand=draworder,101;visible,not GAMESTATE:GetCurrentCourse():GetCourseType() == "CourseType_Survival" and ThemePrefs.Get("GameplayShowScore");diffuse,PlayerColor(PLAYER_2);sleep,3+0.3;smooth,0.5;y,SCREEN_BOTTOM-48
 ScoreP2OffCommand=
 #
 StepsDescriptionP1X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
