--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -2010,7 +2010,7 @@ SmallBanner6OffCommand=
 [ScreenPractice]
 
 [ScreenEditOptions]
-LineNames="1,2,3,4,5,6,R,7,8,9,10,Attacks,11,12,13,14,15,16,SF"
+LineNames="1,2,3,4,5,6,R1,R2,7,8,9,10,Attacks,11,12,13,14,15,16,SF"
 Line1="lua,SpeedMods()"
 LineSF="lua,OptionRowScreenFilter()"
 
