I'd love for hg to realize I am on the damned tip.

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -643,7 +643,7 @@ ScrollerY=SCREEN_CENTER_Y+80
 ScrollerOnCommand=zoom,0;bounceend,0.35;zoom,1
 #
 ShowLogo=true
-LogoX=SCREEN_CENTER_X
+LogoX=SCREEN_CENTER_X-32
 LogoY=SCREEN_CENTER_Y-68
 LogoOnCommand=
 LogoOffCommand=
