Intermediate directory was not quoted.

--- a/src/StepMania-net2011.vcxproj
+++ b/src/StepMania-net2011.vcxproj
@@ -114,7 +114,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <PreBuildEvent>
       <Command>archutils\Win32\verinc
-cl /Zl /nologo /c verstub.cpp /Fo$(IntDir)</Command>
+cl /Zl /nologo /c verstub.cpp /Fo"$(IntDir)"</Command>
     </PreBuildEvent>
     <Midl>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -178,7 +178,7 @@ cl /Zl /nologo /c verstub.cpp /Fo$(IntDir)</Command>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <PreBuildEvent>
       <Command>archutils\Win32\verinc
-cl /Zl /nologo /c verstub.cpp /Fo$(IntDir)</Command>
+cl /Zl /nologo /c verstub.cpp /Fo"$(IntDir)"</Command>
     </PreBuildEvent>
     <Midl>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -247,7 +247,7 @@ cl /Zl /nologo /c verstub.cpp /Fo$(IntDir)</Command>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='FastDebug|Win32'">
     <PreBuildEvent>
       <Command>archutils\Win32\verinc
-cl /Zl /nologo /c verstub.cpp /Fo$(IntDir)</Command>
+cl /Zl /nologo /c verstub.cpp /Fo"$(IntDir)"</Command>
     </PreBuildEvent>
     <Midl>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -312,7 +312,7 @@ cl /Zl /nologo /c verstub.cpp /Fo$(IntDir)</Command>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release-SSE2|Win32'">
     <PreBuildEvent>
       <Command>archutils\Win32\verinc
-cl /Zl /nologo /c verstub.cpp /Fo$(IntDir)</Command>
+cl /Zl /nologo /c verstub.cpp /Fo"$(IntDir)"</Command>
     </PreBuildEvent>
     <Midl>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
